<resources>
    <string name="app_name">Time To Math!</string>
    <string name="name"> Time To Math!</string>
    <string name="discription_main"> Welcome! </string>
    <string name="start">Start new game</string>
    <string name="theory">Read the theoretical material</string>
    <string name="help">Need help?</string>
    <string name="mode">Mode:</string>
    <string name="integer_numbers">Integer Numbers</string>
    <string name="decimal_fractions">Decimal Fractions</string>
    <string name="common_Fractions">Common Fractions</string>
    <string name="SI">Converting Numbers From One Number System To Another</string>
    <string name="theory_app">Information:</string>
    <string name="test">Test test test</string>
    <string name="settings">Settings</string>
    <string name="language">Change language</string>
    <string name="chooseStyle">Choose theme:</string>
    <string name="t1">Theme Green</string>
    <string name="picture1">\n Перевод из 2-ой в 10-ую СС
        \n
\n Для перехода из двоичной системы счисления в десятичную необходимо двоичное число представить в виде суммы степеней двойки и найти её десятичное значение
</string>
    <string name="picture2">
        \n <b> Перевод чисел из 10-ой СС в 2-ую СС</b>
        \n
        \n <b> Правила перевода: </b>
        \n
\n 1.	Разделить десятичное число на 2. Получится частное и остаток.
        \n
\n 2.	Частное опять разделить на 2. Выполнять деление до тех пор, пока последнее частное не станет меньшим 2.
        \n
\n 3.	Записать последнее частное и все остатки в обратном порядке. Полученное число и будет двоичной записью исходного десятичного числа.

    </string>
    <string name="picture3">
       \n  Перевод чисел из 10-ой СС в 2-ю СС
        \n
\n Записываем выделенные остатки в обратном порядке
    </string>
    <string name="t2">Theme Orange</string>
    <string name="picture4"> <b> Перевод чисел из 10-й СС в 8-ю СС </b></string>
    <string name="style">Change style</string>
    <string name="chooseLanguage">Choose language:</string>
    <string name="theory_main">Read the theory for:</string>
    <string name="answer">Enter your answer</string>
    <string name="num">Enter the numerator</string>
    <string name="den">Enter the denominator</string>
    <string name="finish">Finish test</string>
    <string name="answerRight">The right answer: </string>
    <string name="answerYour">Your answer: </string>
    <string name="score">Total score: </string>
    <string name="backMenu">Back to main page</string>
    <string name="si_someinfo"><b>ВНИМАНИЕ!</b> Все буквы пишите строго с маленькой буквы и только на английском языке!</string>
    <string name="picture5">Перевод чисел из 10-ой СС в 16-ю</string>

    <string name="link">
        \n Источник: https://programforyou.ru/calculators/number-systems
        \n
\n http://900igr.net/prezentacija/matematika/vidy-sistem-schislenija-61131/desjatichnoe-znachenie-21.html
    </string>

    <string name="instruction">
        \n
        To start to the decision of the test, you need to click on <b>“Start new game”</b> and choose the necessary rate.\n
        \n
Then click on <b>“Read the theoretical material”</b>, if you need to or just skip it and start new test.\n
        \n
The test consists of 10 tasks of varying complexity (Numerical examples are generated by the program in a random way by the set rules). Answers need to be entered into the entry field specially allotted for this purpose. ATTENTION! At introduction of decimal fractions, use ONLY a point. Introduction of foreign punctuation marks, letters and gaps is inadmissible.\n
        \n
On completion of work click <b>"complete the test"</b>. After that the application will provide you the report on the solved work, will indicate errors and will display the correct answers. The block with information on this material will be also available to you.\n
        \n
Then you will be able to return to the main menu or to pass a test anew.\n
        \n
<b>NOTE!</b> During the work with common fractions two entry fields will be available to you (to numerator and to a denominator respectively). The quantity of tasks for this mode will be reduced up to 5.\n
        \n
<b>Have a good time!</b></string>
</resources>
