<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFontLight"
    tools:context=".SiInfo">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@color/colorFontDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/SI"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:isScrollContainer="true"
                android:text="@string/SiTheory"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/picture1"
                android:textColor="@color/colorText"
                android:textSize="25sp"
                android:gravity="center"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/picture2"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                app:srcCompat="@drawable/picture1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/picture3"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="300dp"
                app:srcCompat="@drawable/picture3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/picture4"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:srcCompat="@drawable/picture4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/picture5"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:srcCompat="@drawable/picture5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/link"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <ImageButton
                android:id="@+id/onBackButton44"
                android:onClick="onBack10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_navigate_before"
                android:background="#0000" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>